# vala-transparent

./: README.md  meson.build  org.gtk.smth.json
data/: meson.build  org.gtk.smth.appdata.xml.in  org.gtk.smth.desktop.in  org.gtk.smth.gschema.xml
po/: POTFILES  meson.build
src/: main.vala  meson.build  smth.gresource.xml  styleapp1.css  window.ui  window.vala
